AS/RL - fix footer partner logos spacing

--- a/app/assets/stylesheets/partials/_base.scss
+++ b/app/assets/stylesheets/partials/_base.scss
@@ -12,7 +12,7 @@ $grid-unit: 13px;
 
 $crowded-room: 2%;
 $container-padding: 10%;
-$voting-round-image-width: $grid-unit * 30;
+$voting-round-image-width: $grid-unit * 25.5;
 $question-image-width: $voting-round-image-width + $grid-unit * 3;
 
 $logo-size: 350px;
