--- a/app/assets/stylesheets/partials/_body.scss
+++ b/app/assets/stylesheets/partials/_body.scss
@@ -1,5 +1,4 @@
 $question-height: $grid-unit * 8;
-$question-image-width: $voting-round-image-width + $grid-unit * 3;
 $comments-width: 580px;
 
 .categories-group {
